--- a/companyAssess/package.json
+++ b/companyAssess/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.22",
     "element-ui": "^2.4.5",
+    "pinia": "^2.0.28",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
