--- a/companyAssess/package.json
+++ b/companyAssess/package.json
@@ -11,6 +11,8 @@
     "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.22",
     "element-ui": "^2.4.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
