--- a/companyAssess/package.json
+++ b/companyAssess/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.22",
     "element-ui": "^2.4.5",
     "html2canvas": "^1.4.1",
