--- a/companyAssess/package.json
+++ b/companyAssess/package.json
@@ -16,13 +16,16 @@
     "jspdf": "^2.5.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/d3": "^7.4.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "babel-plugin-component": "^1.1.1",
+    "d3": "^7.8.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
